--- a/practico4/signalPropia/login.ui
+++ b/practico4/signalPropia/login.ui
@@ -15,14 +15,14 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="2">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="LeRegistrar">
      <property name="text">
       <string>Registrar</string>
      </property>
     </widget>
    </item>
    <item row="0" column="0" colspan="3">
-    <widget class="QLineEdit" name="leUsuario"/>
+    <widget class="LineaDeClave" name="leUsuario"/>
    </item>
    <item row="1" column="0" colspan="3">
     <widget class="QLineEdit" name="leClave">
@@ -58,6 +58,11 @@
    <class>Label</class>
    <extends>QLabel</extends>
    <header location="global">label.h</header>
+  </customwidget>
+  <customwidget>
+   <class>LineaDeClave</class>
+   <extends>QLineEdit</extends>
+   <header location="global">lineadeclave.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
