--- a/practico4/signalPropia/login.ui
+++ b/practico4/signalPropia/login.ui
@@ -14,30 +14,6 @@
    <string>Login</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="2">
-    <widget class="QLabel" name="LeRegistrar">
-     <property name="text">
-      <string>Registrar</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="LineaDeClave" name="leUsuario"/>
-   </item>
-   <item row="1" column="0" colspan="3">
-    <widget class="QLineEdit" name="leClave">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="Label" name="LIngresar">
-     <property name="text">
-      <string>Ingresar</string>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="1">
     <spacer name="horizontalSpacer">
      <property name="orientation">
@@ -51,6 +27,30 @@
      </property>
     </spacer>
    </item>
+   <item row="2" column="0">
+    <widget class="Label" name="LIngresar">
+     <property name="text">
+      <string>Ingresar</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QLabel" name="LeRegistrar">
+     <property name="text">
+      <string>Registrar</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
+    <widget class="QLineEdit" name="leClave">
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QLineEdit" name="lineEdit"/>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -58,11 +58,6 @@
    <class>Label</class>
    <extends>QLabel</extends>
    <header location="global">label.h</header>
-  </customwidget>
-  <customwidget>
-   <class>LineaDeClave</class>
-   <extends>QLineEdit</extends>
-   <header location="global">lineadeclave.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
