--- a/POO/ejercicios/ejercicio14/ejercicio14/ventana.ui
+++ b/POO/ejercicios/ejercicio14/ejercicio14/ventana.ui
@@ -22,17 +22,17 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="Limagen">
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="1">
      <widget class="QPushButton" name="Rotar">
       <property name="text">
        <string>Rotar</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="2">
+     <widget class="QLabel" name="Limagen">
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </item>
